--- a/src/app/custom-step-component/custom-step-component.component.html
+++ b/src/app/custom-step-component/custom-step-component.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="btn-group">
-    <button type="button" class="btn btn-secondary" previousStep>Back</button>
-    <button type="button" class="btn btn-secondary" nextStep>Continue</button>
+    <button type="button" class="btn btn-secondary" awPreviousStep>Back</button>
+    <button type="button" class="btn btn-secondary" awNextStep>Continue</button>
   </div>
 </div>
