--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -146,7 +146,7 @@
         <router-outlet></router-outlet>
       </div>
       <footer>
-        This demo uses ng2-archwizard version 2.1.0
+        This demo uses ng2-archwizard version 3.0.0-dev
       </footer>
     </div>
   </div>
