--- a/src/app/custom-step-symbol/custom-step-symbol.component.html
+++ b/src/app/custom-step-symbol/custom-step-symbol.component.html
@@ -1,38 +1,38 @@
-<wizard #wizard navBarLayout="large-empty-symbols">
-  <wizard-step stepTitle="Steptitle 1" navigationSymbol="&#xf0b1;" navigationSymbolFontFamily="FontAwesome">
+<aw-wizard #wizard [navBarLayout]="'large-empty-symbols'">
+  <aw-wizard-step [stepTitle]="'Steptitle 1'" [navigationSymbol]="{ symbol: '&#xf0b1;', fontFamily: 'FontAwesome' }">
     <div class="centered-content">
       <div>
         Content: Step 1
       </div>
 
       <div class="btn-group">
-        <button type="button" class="btn btn-secondary" nextStep>Continue</button>
+        <button type="button" class="btn btn-secondary" awNextStep>Continue</button>
       </div>
     </div>
-  </wizard-step>
-  <wizard-step stepTitle="Steptitle 2" navigationSymbol="&#xf085;" navigationSymbolFontFamily="FontAwesome">
+  </aw-wizard-step>
+  <aw-wizard-step [stepTitle]="'Steptitle 2'" [navigationSymbol]="{ symbol: '&#xf085;', fontFamily: 'FontAwesome' }">
     <div class="centered-content">
       <div>
         Content: Step 2
       </div>
 
       <div class="btn-group">
-        <button type="button" class="btn btn-secondary" previousStep>Back</button>
-        <button type="button" class="btn btn-secondary" nextStep>Continue</button>
+        <button type="button" class="btn btn-secondary" awPreviousStep>Back</button>
+        <button type="button" class="btn btn-secondary" awNextStep>Continue</button>
       </div>
     </div>
-  </wizard-step>
-  <wizard-step stepTitle="Steptitle 3" navigationSymbol="&#xf00c;" navigationSymbolFontFamily="FontAwesome">
+  </aw-wizard-step>
+  <aw-wizard-step [stepTitle]="'Steptitle 3'" [navigationSymbol]="{ symbol: '&#xf00c;', fontFamily: 'FontAwesome' }">
     <div class="centered-content">
       <div>
         Content: Step 3
       </div>
 
       <div class="btn-group">
-        <button type="button" class="btn btn-secondary" previousStep>Back</button>
-        <button type="button" class="btn btn-secondary" resetWizard>Reset</button>
+        <button type="button" class="btn btn-secondary" awPreviousStep>Back</button>
+        <button type="button" class="btn btn-secondary" awResetWizard>Reset</button>
       </div>
     </div>
-  </wizard-step>
-</wizard>
+  </aw-wizard-step>
+</aw-wizard>
 
