--- a/src/app/optional-steps/optional-steps.component.html
+++ b/src/app/optional-steps/optional-steps.component.html
@@ -1,49 +1,49 @@
-<wizard #wizard>
-  <wizard-step stepTitle="Steptitle 1">
+<aw-wizard #wizard>
+  <aw-wizard-step [stepTitle]="'Steptitle 1'">
     <div class="centered-content">
       <div>
         Content: Step 1
       </div>
 
       <div class="btn-group">
-        <button type="button" class="btn btn-secondary" nextStep>Continue</button>
-        <button type="button" class="btn btn-secondary" goToStep="2">Continue to Step 3</button>
+        <button type="button" class="btn btn-secondary" awNextStep>Continue</button>
+        <button type="button" class="btn btn-secondary" [awGoToStep]="{ stepIndex: 2 }">Continue to Step 3</button>
       </div>
     </div>
-  </wizard-step>
-  <wizard-step stepTitle="Steptitle 2" optionalStep>
+  </aw-wizard-step>
+  <aw-wizard-step [stepTitle]="'Steptitle 2'" awOptionalStep>
     <div class="centered-content">
       <div>
         Content: Optional Step 2
       </div>
 
       <div class="btn-group">
-        <button type="button" class="btn btn-secondary" previousStep>Back</button>
-        <button type="button" class="btn btn-secondary" nextStep>Continue</button>
+        <button type="button" class="btn btn-secondary" awPreviousStep>Back</button>
+        <button type="button" class="btn btn-secondary" awNextStep>Continue</button>
       </div>
     </div>
-  </wizard-step>
-  <wizard-step stepTitle="Steptitle 3">
+  </aw-wizard-step>
+  <aw-wizard-step [stepTitle]="'Steptitle 3'">
     <div class="centered-content">
       <div>
         Content: Step 3
       </div>
 
       <div class="btn-group">
-        <button type="button" class="btn btn-secondary" previousStep>Back</button>
-        <button type="button" class="btn btn-secondary" nextStep>Continue</button>
+        <button type="button" class="btn btn-secondary" awPreviousStep>Back</button>
+        <button type="button" class="btn btn-secondary" awNextStep>Continue</button>
       </div>
     </div>
-  </wizard-step>
-  <wizard-completion-step stepTitle="Completion steptitle">
+  </aw-wizard-step>
+  <aw-wizard-completion-step [stepTitle]="'Completion steptitle'">
     <div class="centered-content">
       <div>
         Content: Completion Step
       </div>
 
       <div class="btn-group">
-        <button type="button" class="btn btn-secondary" resetWizard>Reset</button>
+        <button type="button" class="btn btn-secondary" awResetWizard>Reset</button>
       </div>
     </div>
-  </wizard-completion-step>
-</wizard>
+  </aw-wizard-completion-step>
+</aw-wizard>
