--- a/src/app/wizard-step-ngfor/wizard-step-ngfor.component.html
+++ b/src/app/wizard-step-ngfor/wizard-step-ngfor.component.html
@@ -1,13 +1,13 @@
-<wizard> 
-	<wizard-step stepTitle="{{wizard.header}}" *ngFor="let wizard of wizardSteps; let first = first; let last = last"> 
+<aw-wizard>
+	<aw-wizard-step [stepTitle]="wizard.header" *ngFor="let wizard of wizardSteps; let first = first; let last = last">
 		<div class="centered-content">
 			{{wizard.content}}
 			<br /><br />
-			
+
 			<div class="btn-group">
-				<button class="btn btn-secondary" previousStep *ngIf="!first">Previous Step</button> 
-				<button class="btn btn-secondary" nextStep *ngIf="!last">Next Step</button> 
+				<button class="btn btn-secondary" awPreviousStep *ngIf="!first">Previous Step</button>
+				<button class="btn btn-secondary" awNextStep *ngIf="!last">Next Step</button>
 			</div>
 		</div>
-	</wizard-step> 
-</wizard>
+	</aw-wizard-step>
+</aw-wizard>
