- format WizardStepNgForComponent - implement AfterViewInit in WizardStepNgForComponent

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -135,7 +135,7 @@
             </li>
 
             <li routerLink="/wizard-step-ngfor" routerLinkActive="active">
-              <a>Wizard stept with *ngFor</a>
+              <a>Wizard step with *ngFor</a>
             </li>
           </ul>
         </div>
