--- a/src/app/custom-css/custom-css.component.html
+++ b/src/app/custom-css/custom-css.component.html
@@ -1,8 +1,9 @@
-<aw-wizard #wizard [navigationMode]="'strict'">
+<aw-wizard #wizard class="custom-css">
   <aw-wizard-step [stepTitle]="'Steptitle 1'">
     <div class="centered-content">
       <div>
-        Content: Step 1
+        <h3>Custom CSS</h3>
+        <p>This wizard can handle custom CSS, check the step titles in the navigation bar and the content here, it can be modified by an external custom CSS file</p>
       </div>
 
       <div class="btn-group">
@@ -30,19 +31,8 @@
 
       <div class="btn-group">
         <button type="button" class="btn btn-secondary" awPreviousStep>Back</button>
-        <button type="button" class="btn btn-secondary" awNextStep>Continue</button>
-      </div>
-    </div>
-  </aw-wizard-step>
-  <aw-wizard-completion-step [stepTitle]="'Completion steptitle'">
-    <div class="centered-content">
-      <div>
-        Completion step content
-      </div>
-
-      <div class="btn-group">
         <button type="button" class="btn btn-secondary" awResetWizard>Reset</button>
       </div>
     </div>
-  </aw-wizard-completion-step>
+  </aw-wizard-step>
 </aw-wizard>
