- rename ng2-archwizard to angular-archwizard - prepare for version 3.0.0 release

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -2,7 +2,7 @@
   <div class="row" style="height: 100%">
     <div class="col-sm-2 nopadding">
       <div class="nav-side-menu">
-        <div class="brand">ng2-archwizard</div>
+        <div class="brand">angular-archwizard</div>
         <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
         <div class="menu-list">
           <ul id="menu-content" class="menu-content collapse out">
@@ -151,7 +151,7 @@
         <router-outlet></router-outlet>
       </div>
       <footer>
-        This demo uses ng2-archwizard version 3.0.0-dev
+        This demo uses angular-archwizard version 3.0.0
       </footer>
     </div>
   </div>
