adds optional-last-step scenario

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -115,6 +115,10 @@
               <a>Optional steps</a>
             </li>
 
+            <li routerLink="/optional-last-step" routerLinkActive="active">
+              <a>Optional last step</a>
+            </li>
+
             <li routerLink="/default-step-index" routerLinkActive="active">
               <a>Default wizard step / Initial wizard step</a>
             </li>
