sets relative path for dependency

--- a/src/app/optional-last-step/optional-last-step.component.html
+++ b/src/app/optional-last-step/optional-last-step.component.html
@@ -1,4 +1,4 @@
-<aw-wizard #wizard>
+<aw-wizard #wizard [navBarLayout]="'large-filled-symbols'">
   <aw-wizard-step [stepTitle]="'Steptitle 1'">
     <div class="centered-content">
       <div>
