Demo for custom step symbol template.
```
<aw-wizard-step stepTitle="...">
    <ng-template awWizardStepSymbol><i class="fa fa-taxi"></i></ng-template>
    ...
</aw-wizard-step>
```

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -42,6 +42,9 @@
               <li routerLink="/navigation-symbol/custom" routerLinkActive="active">
                 <a>Custom font</a>
               </li>
+              <li routerLink="/navigation-symbol/custom-template" routerLinkActive="active">
+                <a>Custom template</a>
+              </li>
             </ul>
 
             <li data-toggle="collapse" data-target="#navBarLocation" class="collapsed">
