A demo for custom navigation mode
http://localhost:4200/#/custom-navigation-mode/

Requires 'refactor-nav-modes' branch of angular-archwizard from https://github.com/madoar/angular-archwizard/pull/166

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -126,6 +126,10 @@
               <a>Custom designed step titles</a>
             </li>
 
+            <li routerLink="/custom-navigation-mode" routerLinkActive="active">
+              <a>Custom navigation mode</a>
+            </li>
+
             <li routerLink="/optional-steps" routerLinkActive="active">
               <a>Optional steps</a>
             </li>
