--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import '../node_modules/angular-archwizard/archwizard.css';
+// Demonstrate customization of angular-archwizard color scheme
+$wz-color-default: #fff8a0;
+
+@import '../node_modules/angular-archwizard/archwizard.scss';
 
 html, body {
   margin: 0 auto;
