Update the custom navigation mode demo for the stateless-nav-modes branch of the library

--- a/src/app/custom-navigation-mode/custom-navigation-mode.component.html
+++ b/src/app/custom-navigation-mode/custom-navigation-mode.component.html
@@ -49,7 +49,7 @@
 <p></p>
 <p>Option 2: Set <code>&lt;aw-wizard navigationModeInput="..."&gt;</code> to a function returning a custom <code>NavigationMode</code>.</p>
 
-<aw-wizard [navigationMode]="getCustomNavigationMode">
+<aw-wizard [navigationMode]="customNavigationMode">
   <aw-wizard-step [stepTitle]="'Steptitle 1'">
     <div class="centered-content">
       <div>
