Update demo pages to use ConfigurableNavigationMode
Previous menu structure:

```
Navigation modes
  - Strict navigation mode (default)
  - Semi-strict navigation mode
  - Free navigation mode
...
Custom navigation mode
```

Updated menu structure:

```
Navigation modes:
  - Default navigation mode
  - Configurable navigation mode
  - Custom navigation mode
```

The "Configurable navigation mode" page contains two select controls to choose backward navigation and forward navigation policies.

--- a/src/app/configurable-navigation-mode/configurable-navigation-mode.component.html
+++ b/src/app/configurable-navigation-mode/configurable-navigation-mode.component.html
@@ -1,4 +1,23 @@
-<aw-wizard #wizard [navigationMode]="'free'">
+<div style="margin: 1em 0; text-align: center;">
+  <span>
+    <label for="navigateBackward" style="margin-right: 4px;">Navigate backward: </label>
+    <select id="navigateBackward" name="navigateBackward" [(ngModel)]="navigateBackward">
+      <option value="allow">Allow</option>
+      <option value="deny">Deny</option>
+    </select>
+  </span>
+
+  <span style="margin-left: 2em;">
+    <label for="navigateForward" style="margin-right: 4px;">Navigate forward: </label>
+    <select id="navigateForward" name="navigateForward" [(ngModel)]="navigateForward">
+      <option value="allow">Allow</option>
+      <option value="deny">Deny</option>
+    </select>
+  </span>
+</div>
+
+<aw-wizard #wizard
+  [awNavigationMode] [navigateBackward]="navigateBackward" [navigateForward]="navigateForward">
   <aw-wizard-step [stepTitle]="'Steptitle 1'">
     <div class="centered-content">
       <div>
