--- a/src/app/default-navigation-mode/default-navigation-mode.component.html
+++ b/src/app/default-navigation-mode/default-navigation-mode.component.html
@@ -1,4 +1,4 @@
-<aw-wizard #wizard [navigationMode]="'strict'">
+<aw-wizard #wizard>
   <aw-wizard-step [stepTitle]="'Steptitle 1'">
     <div class="centered-content">
       <div>
