Return the "Free navigation mode" page and show how the old FreeNavigationMode can be emulated with ConfigurableNavigationMode and optional wizard steps.

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -105,6 +105,9 @@
               <li routerLink="/navigation-mode/configurable" routerLinkActive="active">
                 <a>Configurable navigation mode</a>
               </li>
+              <li routerLink="/navigation-mode/free" routerLinkActive="active">
+                <a>Free navigation mode</a>
+              </li>
               <li routerLink="/navigation-mode/custom" routerLinkActive="active">
                 <a>Custom navigation mode</a>
               </li>
