--- a/src/app/free-navigation-mode/free-navigation-mode.component.html
+++ b/src/app/free-navigation-mode/free-navigation-mode.component.html
@@ -10,7 +10,61 @@
 &lt;/aw-wizard&gt;
 </code></pre>
 
-<aw-wizard #wizard
+<aw-wizard
+  [awNavigationMode] navigateBackward="allow" navigateForward="allow">
+  <aw-wizard-step [stepTitle]="'Steptitle 1'" awOptionalStep>
+    <div class="centered-content">
+      <div>
+        Content: Step 1
+      </div>
+
+      <div class="btn-group">
+        <button type="button" class="btn btn-secondary" awNextStep>Continue</button>
+      </div>
+    </div>
+  </aw-wizard-step>
+  <aw-wizard-step [stepTitle]="'Steptitle 2'" awOptionalStep>
+    <div class="centered-content">
+      <div>
+        Content: Step 2
+      </div>
+
+      <div class="btn-group">
+        <button type="button" class="btn btn-secondary" awPreviousStep>Back</button>
+        <button type="button" class="btn btn-secondary" awNextStep>Continue</button>
+      </div>
+    </div>
+  </aw-wizard-step>
+  <aw-wizard-step [stepTitle]="'Steptitle 3'" awOptionalStep>
+    <div class="centered-content">
+      <div>
+        Content: Step 3
+      </div>
+
+      <div class="btn-group">
+        <button type="button" class="btn btn-secondary" awPreviousStep>Back</button>
+        <button type="button" class="btn btn-secondary" awNextStep>Continue</button>
+      </div>
+    </div>
+  </aw-wizard-step>
+  <aw-wizard-completion-step [stepTitle]="'Completion steptitle'">
+    <div class="centered-content">
+      <div>
+        Completion step content
+      </div>
+
+      <div class="btn-group">
+        <button type="button" class="btn btn-secondary" awResetWizard>Reset</button>
+      </div>
+    </div>
+  </aw-wizard-completion-step>
+</aw-wizard>
+
+<p>Note that unlike the old <code>FreeNavigationMode</code>, in this example all steps are styled as optional.
+If you absolutely require the same look and feel, you can apply custom CSS:</p>
+
+<!-- Apply a custom CSS class 'free-navigation' to enable additional styles defined globally in `src/styles.scss` -->
+<aw-wizard ngClass="free-navigation"
   [awNavigationMode] navigateBackward="allow" navigateForward="allow">
   <aw-wizard-step [stepTitle]="'Steptitle 1'" awOptionalStep>
     <div class="centered-content">
