fix #37 and use scss files for the custom css examples

--- a/src/app/custom-global-css/custom-global-css.component.html
+++ b/src/app/custom-global-css/custom-global-css.component.html
@@ -1,4 +1,4 @@
-<aw-wizard #wizard class="custom-css">
+<aw-wizard class="custom-global-css">
   <aw-wizard-step [stepTitle]="'Steptitle 1'">
     <div class="centered-content">
       <div>
