--- a/src/app/custom-step-css/custom-step-css.component.html
+++ b/src/app/custom-step-css/custom-step-css.component.html
@@ -1,4 +1,4 @@
-<aw-wizard #wizard class="custom-css">
+<aw-wizard class="custom-step-css">
   <aw-wizard-step [stepTitle]="'Steptitle 1'">
     <div class="centered-content">
       <div>
