--- a/src/app/free-navigation-mode/free-navigation-mode.component.scss
+++ b/src/app/free-navigation-mode/free-navigation-mode.component.scss
@@ -8,39 +8,5 @@
 // Adjust the styling of wizard steps so that optional steps look like default ones.
 aw-wizard.custom-styling {
   $wz-color-optional: $wz-color-default !global;
-
-  @each $layout in 'horizontal', 'vertical' {
-    aw-wizard-navigation-bar.#{$layout} {
-
-      &.small ul.steps-indicator {
-        @include wz-define-style($layout, $width: $wz-small-dot-width, $height: $wz-small-dot-height, $border-width: 0) {
-          @include wz-state-circle-with-background($wz-param-indicator-color);
-        }
-      }
-
-      &.large-filled ul.steps-indicator {
-        @include wz-define-style($layout, $border-width: 0) {
-          @include wz-state-circle-with-background($wz-param-indicator-color);
-        }
-      }
-
-      &.large-empty ul.steps-indicator {
-        @include wz-define-style($layout) {
-          @include wz-state-circle-with-border($wz-param-indicator-color);
-        }
-      }
-
-      &.large-filled-symbols ul.steps-indicator {
-        @include wz-define-style($layout, $border-width: 0) {
-          @include wz-state-circle-with-background-and-content($wz-param-indicator-color);
-        }
-      }
-
-      &.large-empty-symbols ul.steps-indicator {
-        @include wz-define-style($layout) {
-          @include wz-state-circle-with-border-and-content($wz-param-indicator-color);
-        }
-      }
-    }
-  }
+  @include wz-define-layout-styles();
 }
