Add a demo page for initially completed wizard steps (awCompletedStep directive)

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -134,7 +134,11 @@
             </li>
 
             <li routerLink="/default-step-index" routerLinkActive="active">
-              <a>Default wizard step / Initial wizard step</a>
+              <a>Default wizard step</a>
+            </li>
+
+            <li routerLink="/initially-completed-wizard-steps" routerLinkActive="active">
+              <a>Initially completed wizard steps</a>
             </li>
 
             <li routerLink="/arbitrary-step-navigation" routerLinkActive="active">
