--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import '../node_modules/angular-archwizard/archwizard.css';
+@import '../node_modules/angular-archwizard/archwizard';
 
 html, body {
   margin: 0 auto;
