Add [navigationForward]="visited" to the list of available options on the 'Configurable navigation mode' demo page (http://localhost:4200/#/navigation-mode/configurable)

--- a/src/app/configurable-navigation-mode/configurable-navigation-mode.component.html
+++ b/src/app/configurable-navigation-mode/configurable-navigation-mode.component.html
@@ -12,6 +12,7 @@
     <select id="navigateForward" name="navigateForward" [(ngModel)]="navigateForward">
       <option value="allow">Allow</option>
       <option value="deny">Deny</option>
+      <option value="visited">Visited</option>
     </select>
   </span>
 </div>
